<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:layout_marginTop="@dimen/activity_margin_left"
            android:src="@drawable/my_profile"
            android:layout_width="200dp"
            android:layout_height="200dp" />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_name"
            android:textSize="@dimen/largerText"/>

        <View
            android:layout_marginTop="@dimen/activity_margin_left"
            android:background="@color/cardview_shadow_start_color"
            android:layout_width="wrap_content"
            android:layout_height="1dp"/>


        <RelativeLayout
            android:layout_margin="@dimen/activity_margin_left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/track"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/track"
                android:textSize="@dimen/largerText"/>


            <TextView
                android:id="@+id/trackValue"
            android:layout_toEndOf="@+id/track"
                android:layout_marginStart="@dimen/activity_margin_left"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_track"
                android:textSize="@dimen/largerText"/>

            <TextView
                android:id="@+id/country"
                android:layout_below="@+id/track"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country"
                android:textSize="@dimen/largerText"/>

            <TextView
                android:layout_toEndOf="@+id/country"
                android:id="@+id/countryValue"
                android:layout_below="@id/trackValue"
                android:layout_marginStart="@dimen/activity_margin_left"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_country"
                android:textSize="@dimen/largerText"/>

            <TextView
                android:id="@+id/email"
                android:layout_below="@+id/country"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="@dimen/largerText"/>

            <TextView
                android:layout_toEndOf="@+id/email"
                android:id="@+id/emailValue"
                android:layout_below="@id/countryValue"
                android:layout_marginStart="@dimen/activity_margin_left"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_email"
                android:textSize="@dimen/largerText"/>

            <TextView
                android:id="@+id/phone"
                android:layout_below="@+id/email"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textSize="@dimen/largerText"/>

            <TextView
                android:layout_toEndOf="@+id/phone"
                android:id="@+id/phoneValue"
                android:layout_below="@id/emailValue"
                android:layout_marginStart="@dimen/activity_margin_left"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_phone"
                android:textSize="@dimen/largerText"/>


            <TextView
                android:id="@+id/slack"
                android:layout_below="@+id/phone"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/slack"
                android:textSize="@dimen/largerText"/>

            <TextView
                android:layout_toEndOf="@+id/slack"
                android:id="@+id/slackValue"
                android:layout_below="@id/phoneValue"
                android:layout_marginStart="@dimen/activity_margin_left"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_slack"
                android:textSize="@dimen/largerText"/>




        </RelativeLayout>


    </LinearLayout>

</ScrollView>