<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/textTItle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_margin_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/largerText"
        style="@style/TextAppearance.AppCompat.Headline"
        android:text="@string/welcometoALC" />

    <LinearLayout
        android:layout_centerHorizontal="true"
        android:paddingTop="@dimen/activity_margin_left"
        android:gravity="center_horizontal"
        android:layout_below="@+id/textTItle"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/aboutBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_activity"
            android:textAllCaps="true"
            style="@style/Widget.AppCompat.Button.Colored"
            />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/profileBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_activity"
            android:textAllCaps="true"
            style="@style/Widget.AppCompat.Button.Colored"

            />

    </LinearLayout>

</RelativeLayout>